<resources>
    <string name="app_name">MVPDemo</string>
    <string name="getDemo">获取Demo</string>
    <string name="saveDemo">保存Demo</string>
    <string name="getList">获取列表</string>
    <string name="saveBook">保存Book</string>
    <string name="getUnioList">获取关联列表</string>
    <string name="getRxjavaUnionList">RxjavaUnion获取</string>
    <string name="openActivity">跳转</string>
    <string name="toDemoList">跳转Demo</string>
    <string name="openDialog">打开对话框</string>
    <string name="_123">123</string>
    <string name="this_is_switch_fragment">this is switch fragment</string>
    <string name="batchInsert">批量插入</string>
    <string name="downloadMediaFile">下载拍照图片</string>
    <string name="打开飞控界面">openAirCraft</string>
    <string name="下载图片">downloadfile</string>
    <string name="showThumbView">显示缩略图</string>
    <string name="video_feeder_single_camera_product_title">*Inspire1/M100/P3/P4/Mavic... \n Only one live video is available"</string>
    <string name="video_feeder_m600_lb2_title">*M600/LB2 products(with two cameras) \n with follow options:</string>
    <string name="video_feeder_m210_two_camera_title">*M210 with two cameras:</string>
    <string name="product_with_multiple_gimbals">*Product with multiple gimbals:</string>
    <string name="video_feeder_enable_single">\tEnable EXT(Single Mode)</string>
    <string name="video_feeder_disable_single">\tDisable EXT(Dual Mode)</string>
    <string name="video_feeder_lb_only">LB Only</string>
    <string name="video_feeder_ext_only">EXT Only</string>
    <string name="video_feeder_both_lb_ext">LB+EXT</string>
    <string name="video_feeder_hdmi_only">HDMI Only</string>
    <string name="video_feeder_av_only">AV Only</string>
    <string name="video_feeder_both_hdmi_av">HDMI+AV</string>
    <string name="video_feeder_right_fpv">Right+FPV</string>
    <string name="video_feeder_left_fpv">Left+FPV</string>
    <string name="video_feeder_left_right">Left+Right</string>
    <string name="component_listview_video_feeder">Video Feeder View</string>
    <string name="shootPhoto">拍照</string>
    <string name="showPreview">显示预览图</string>
</resources>
