<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/this_is_switch_fragment" />

    <Button
        android:id="@+id/gotoDemo"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/toDemoList" />

    <Button
        android:id="@+id/openDiaglog"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/openDialog" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="80dp"
        android:numColumns="3"
        android:stretchMode="spacingWidthUniform"></GridView>

</LinearLayout>
